--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -12,20 +12,19 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - name: Windows
-          os: windows-latest
-          
-        - name: macOS
-          os: macos-latest
+          - name: Windows
+            os: windows-latest
+            target: ""
+          - name: macOS
+            os: macos-latest
+            target: ""
+          - name: Android32
+            os: ubuntu-latest
+            target: Android32
+          - name: Android64
+            os: ubuntu-latest
+            target: Android64
 
-        - name: Android32
-          os: ubuntu-latest
-          target: Android32
-
-        - name: Android64
-          os: ubuntu-latest
-          target: Android64
-          
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
 
@@ -38,7 +37,8 @@ jobs:
           bindings: geode-sdk/bindings
           bindings-ref: main
           combine: true
-          target: ${{ matrix.config.target }}
+          # Only set target if defined
+          target: ${{ matrix.config.target != '' && matrix.config.target || '' }}
 
   package:
     name: Package builds
